# openworkers-runtime-boa

./: Cargo.toml  README.md  TODO.md
benches/: generic_benchmark.rs  worker_benchmark.rs
examples/: benchmark.rs  simple_test.rs  streaming_bench.rs  test_fetch.rs  test_fetch_forward.rs  test_real_fetch.rs  test_real_timers.rs  test_timers.rs
src/: lib.rs  runtime.rs  snapshot.rs  worker.rs
tests/: generic_tests.rs  integration_test.rs  scheduled_test.rs  streams_test.rs  timer_test.rs
